syntax = "proto3";
package vmedis;

option go_package = "github.com/turfaa/vmedis-proxy-api/kafkapb";

message UpdatedDrugByVmedisID {
  string request_key = 1;
  int64 vmedis_id = 2;
}

message UpdatedDrugByVmedisCode {
  string request_key = 1;
  string vmedis_code = 2;
}
